2002-12-02  Mike Sperber <mike@xemacs.org>

	* The Great Window Configuration rewrite: Re-implement window
	configuration functionality in Emacs Lisp.

	* window-xemacs.el (current-window-configuration): 
	(set-window-configuration): (plus many functions they depend on)
	Re-implement window configurations in Emacs Lisp.

2002-12-03  Didier Verna  <didier@xemacs.org>

	* faces.el (set-face-background-pixmap-file): Ensure default value
	can be computed.

2002-12-03  Didier Verna  <didier@xemacs.org>

	* faces.el (background-pixmap-file-history): New.
	* faces.el (set-face-background-pixmap-file): New.

2002-11-28  Mike Sperber <mike@xemacs.org>

	* window.el (save-window-excursion): New macro to eventually
	replace the bytecode instruction of that name.

2002-11-16  Mike Sperber <mike@xemacs.org>

	* dumped-lisp.el (preloaded-file-list): Move window.el & neighbors
	further up because other some files further down import macro(s)
	from it.

2002-11-26  Mike Sperber <mike@xemacs.org>

	* window.el (shrink-window-if-larger-than-buffer): Elide braindead
	use of `save-window-excursion'.

2002-11-28  Mike Sperber <mike@xemacs.org>

	* dialog.el (make-dialog-box): `set-frame-pixel-size' ->
	`set-frame-displayable-pixel-size,' following the
	`frame-pixel-xxx' reorganization in src/frame.c.

2002-11-27  Ben Wing  <ben@xemacs.org>

	* cl-macs.el (loop): Document better.

	* cmdloop.el:
	* cmdloop.el (command-error):
	* cmdloop.el (breakpoint-on-error): Removed.
	Remove nonworking breakpoint-on-error now that debug-on-error
	works as documented.

	* help.el:
	* help.el (temp-buffer-mode): New.
	* help.el (Commands): New.
	* help.el (temp-buffer-mode-map): New.
	* help.el (mode-for-temp-buffer): New.
	* help.el (with-displaying-help-buffer): Removed.
	* help.el (with-displaying-temp-buffer): New.
	Extract out with-displaying-help-buffer into a more general
	mechanism.

	* lib-complete.el:
	* lib-complete.el (find-library-source-path):
	* lib-complete.el (find-library):