@@ -1,3 +1,7 @@
+2002-12-03  John Paul Wallington  <jpw@shootybangbang.com>
+
+	* cus-start.el (garbage-collection-messages): Add.
+
 2002-12-02  Mike Sperber <mike@xemacs.org>
 
 	* The Great Window Configuration rewrite: Re-implement window
